deployments/infra/traefik/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: infra
  labels:
    k8s-app: traefik-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-controller
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-controller
        name: traefik-ingress-controller
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm
        node-role.kubernetes.io/master: "true"
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
      serviceAccountName: traefik-ingress-serviceaccount
      terminationGracePeriodSeconds: 35
      volumes:
        - name: traefik-ingress-configmap
          configMap:
            name: traefik-ingress-configmap
      containers:
        - image: traefik:maroilles
          name: traefik-ingress-controller
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 200m
              memory: 384Mi
            requests:
              cpu: 25m
              memory: 128Mi
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /ping
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /ping
              port: 80
              scheme: HTTP
            periodSeconds: 5
          volumeMounts:
            - mountPath: "/config"
              name: "traefik-ingress-configmap"
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: https
              containerPort: 443
              hostPort: 443
            - name: dashboard
              containerPort: 8080
              hostPort: 8080
          args:
          - --configfile=/config/traefik.toml
