deployments/infra/traefik/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-controller
  namespace: infra
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth.infra.svc
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: traefik.cluster.rebelinblue.com
      http:
        paths:
        - path: /
          backend:
            serviceName: traefik-ingress-controller
            servicePort: 8080
  tls:
    - hosts:
        - traefik.cluster.rebelinblue.com
      secretName: traefik-tls
